daniel_masero/session03/exercise02/mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
   name: mariadb
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: mariadb
        tier: backend
    spec:
      containers:
      - image: bitnami/mariadb:latest
        name: mariadb
        ports:
          - name: mariadb-server
            containerPort: 3306
        volumeMounts:
          - mountPath: /bitnami
            name: volumesdb
            subPath: mariadb
      volumes:
      - name: volumesdb
        emptyDir: {}
        #persistentVolumeClaim:
        #  claimName: volumes-mariadb
