daniel_masero/session03/exercise02/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
   name: wordpress
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: bitnami/wordpress:latest
        name: wordpress
        ports:
          - name: http-server
            containerPort: 80
        volumeMounts:
          - mountPath: /bitnami
            name: volumeswordpress
      volumes:
      - name: volumeswordpress
        emptyDir: {}
        #persistentVolumeClaim:
        #  claimName: volumes-wordpress
