daniel_masero/session03/exercise02/mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
   name: mariadb
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: mariadb-server
  selector:
    app: mariadb
    tier: backend
  sessionAffinity: ClientIP
