daniel_masero/session03/exercise02/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
   name: wordpress
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http-server
  selector:
    app: wordpress
    tier: frontend
