daniel_masero/session03/exercise02/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: db-frontend-allow
spec:
  podSelector:
    matchLabels:
      app: db
      tier: backend
  ingress:
  - ports:
    - protocol: TCP
      port: 3306
    from:
    - podSelector:
        matchLabels:
          app: wordpress
          tier: frontend
